--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,5 +69,5 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
-
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 }
