--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,5 +81,17 @@ dependencies {
 
     implementation 'com.wdullaer:materialdatetimepicker:4.2.3'
 
+// unit test
+    testImplementation 'junit:junit:4.13'
+    androidTestImplementation 'androidx.test:core:1.2.0'
+
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test:rules:1.2.0'
+
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.ext:truth:1.2.0'
+    androidTestImplementation 'com.google.truth:truth:0.42'
+
+
 
 }
