--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,6 +95,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:truth:1.2.0'
     androidTestImplementation 'com.google.truth:truth:0.42'
 
-
+    implementation "com.google.android.material:material:1.1.0"
 
 }
